# inventoryServer/products/api/v1/products.routes.js
@@ -5,14 +5,14 @@ router.get('/product-types', controller.getAllProductTypes);
 
 router.get('/product-type', controller.getProductType);
 
-router.get('/complete-products/:refDate', controller.getAllCompleteProducts);
+router.get('/:refDate', controller.getAllCompleteProducts);
 
 router.post('/product-types', controller.addProductType);
 
-router.post('/complete-products/:refDate', controller.addCompleteProduct);
+router.post('/:refDate', controller.addCompleteProduct);
 
 router.put('/product-types', controller.updateProductType);
 
-router.put('/complete-products/:refDate', controller.updateCompleteProduct);
+router.put('/:refDate', controller.updateCompleteProduct);
 
 module.exports = router;
